[gd_scene load_steps=8 format=3 uid="uid://dikpya2pi0i66"]

[ext_resource type="Script" path="res://main.gd" id="1_lyfac"]
[ext_resource type="PackedScene" uid="uid://c1tug87fw4xs" path="res://Player/rocket.tscn" id="1_nmvdq"]
[ext_resource type="PackedScene" uid="uid://bwtlhy46ebjdw" path="res://Collectables/star.tscn" id="4_3h5cl"]
[ext_resource type="PackedScene" uid="uid://cihqkayqkp35l" path="res://Background/background.tscn" id="5_rc5yt"]
[ext_resource type="PackedScene" uid="uid://c7khim02dfxsw" path="res://Background/transition.tscn" id="10_ngmpp"]
[ext_resource type="PackedScene" uid="uid://cd02qtpq2ias" path="res://UI/tutorial.tscn" id="11_ldlc6"]

[sub_resource type="Curve2D" id="Curve2D_e3rry"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 20, 0, 0, 0, 0, 0, 700, 0)
}
point_count = 2

[node name="Main" type="Node"]
script = ExtResource("1_lyfac")
star_scene = ExtResource("4_3h5cl")

[node name="Background" parent="." instance=ExtResource("5_rc5yt")]

[node name="Rocket" parent="." instance=ExtResource("1_nmvdq")]
position = Vector2(359, 129)

[node name="BirdTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="StarTimer" type="Timer" parent="."]

[node name="SatelliteTimer" type="Timer" parent="."]

[node name="Music" type="AudioStreamPlayer" parent="."]
mix_target = 2
bus = &"Music"

[node name="ObstaclePath" type="Path2D" parent="."]
curve = SubResource("Curve2D_e3rry")

[node name="PathFollow2D" type="PathFollow2D" parent="ObstaclePath"]
position = Vector2(20, 0)

[node name="Tutorial" parent="." instance=ExtResource("11_ldlc6")]
visible = false

[node name="Transition" parent="." instance=ExtResource("10_ngmpp")]

[connection signal="timeout" from="BirdTimer" to="." method="_on_bird_timer_timeout"]
[connection signal="timeout" from="StarTimer" to="." method="_on_star_timer_timeout"]
[connection signal="timeout" from="SatelliteTimer" to="." method="_on_satellite_timer_timeout"]
[connection signal="finished" from="Music" to="." method="_on_music_finished"]
